--- a/style-noticia.css
+++ b/style-noticia.css
@@ -73,8 +73,16 @@ header nav ul{
     padding: 5px;
 }
 
+
+img{
+    width: 100%;
+    padding: 16px;
+    border-radius: 10px;
+}
+
 .article{
     display: flex;
+    justify-content: center;
     padding: 40px 120px;
     gap: 40px;
     flex-wrap: wrap;
@@ -86,12 +94,14 @@ header nav ul{
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
     padding: 16px;
     border-radius: 8px;
-    width: 100%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
 }
 
 .article-header{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin: 8px;
     font-weight: 200;
@@ -99,16 +109,22 @@ header nav ul{
 
 .article-title{
     font-weight: 900;
+    font-size: 2.4em;
 }
 
 .article-contente{
     line-height: 1.4;
 }
-
-.like-button{
-    background: none;
-    border: none;
-    font-size: 1.5em;
+.news-highlight{
+    font-size: larger;
+    font-weight: 700;
+}
+.news-body{
+    padding: 20px;
+    background-color: #f4f5f7;
+    border-radius: 8px;
+    font-size: larger;
+    font-weight: 700;
 }
 
 
